first version project

--- a/STMicroelectronics/STM32F407G-DISC1/Lighting_LEDs_using_SPL/README
+++ b/STMicroelectronics/STM32F407G-DISC1/Lighting_LEDs_using_SPL/README
@@ -1,1 +1,3 @@
 В данном программном проекте мы включаем 1 или все светодиоды на отладочной плате STM32F407G-DISC1.
+Используемая IDE Keil v5.41
+Фото работы программного проекта на отладочной плате STM32F407G-DISC1 находятся в каталоге Foto_work.
