first version project

--- a/STMicroelectronics/STM32F407G-DISC1/Connect_the_button_using_SPL/README
+++ b/STMicroelectronics/STM32F407G-DISC1/Connect_the_button_using_SPL/README
@@ -1,3 +1,4 @@
 В данном программном проекте мы используем пользовательскую кнопку на отладочной плате STM32F407G-DISC1.
 Используемая IDE Keil v5.41
 Видео работы программного проекта на отладочной плате STM32F407G-DISC1 находятся в каталоге Video_work.
+Для демонтсрации работы данного программного проекта используется светодиодный индикатор GNA-R1025101ZG-21.
