first version project

--- a/STMicroelectronics/README
+++ b/STMicroelectronics/README
@@ -1,1 +1,1 @@
-Здесь представлены программные проекты на отладочной плате STM32F407G-DISC1.
+Здесь представлены программные проекты для микроконтроллеров компании STMicroelectronics.
