first version project

--- a/STMicroelectronics/STM32F407G-DISC1/Timers_using_HAL_M/README
+++ b/STMicroelectronics/STM32F407G-DISC1/Timers_using_HAL_M/README
@@ -1,3 +1,4 @@
 В данном программном проекте мы используем таймер на отладочной плате STM32F407G-DISC1 и используем библиотеку HAL.
 В отличие от проекта Timers_using_HAL, в данном программном проекте светодиоды гаснут сразу после отпускания пользовательской кнопки, нет выполнения цикла "до конца".
 Используеме IDE Keil v5.35 и CubeMX v6.14.1
+Видео работы программного проекта на отладочной плате STM32F407G-DISC1 находятся в каталоге Video_work.
