--- a/STMicroelectronics/STM32F407G-DISC1/PWM_using_HAL/README
+++ b/STMicroelectronics/STM32F407G-DISC1/PWM_using_HAL/README
@@ -1,2 +1,3 @@
 В данном программном проекте мы используем Широтно-Импульсную модуляцию на отладочной плате STM32F407G-DISC1 и используем библиотеку HAL.
 Используеме IDE Keil v5.35 и CubeMX v6.14.1
+Видео работы программного проекта на отладочной плате STM32F407G-DISC1 находятся в каталоге Video_work.
